# NHook

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
asm/: call_dynamic_func.asm  insn_simulation.asm  nh_call_dynamic_func.asm
include/: core.h  hook.h  manager.h  module.h  nhook.h  thread.h  trampoline.h  utils.h
modulerules/: 20_nhook.h  nhook_rules.h
src/: core.c  hook.c  main.c  manager.c  module.c  nhook.c  thread.c  trampoline.c  utils.c
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  hook.c  local_hook.c
